--- a/CFPhotoBrowseDemo/Podfile
+++ b/CFPhotoBrowseDemo/Podfile
@@ -7,6 +7,7 @@ target 'CFPhotoBrowseDemo' do
 
   # Pods for CFPhotoBrowseDemio
   pod 'SDWebImage', '~>3.8'
+  pod 'Kingfisher', '~> 4.0'
 
   target 'CFPhotoBrowseDemoTests' do
     inherit! :search_paths
